Missing refresh on Undo for nodes (mask example) #41818

Closed
opened 2014-09-13 23:06:45 +02:00 by Alexey · 9 comments

*System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
1.png
2.png
3.png
4.png

Exact steps for others to reproduce the error
open this
mask_undo.blend
press F12 to receive rendered result with compositing
try to change anything in this mask and press ctrl+Z to undo - we will see don't update.

*System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![1.png](https://archive.blender.org/developer/F110196/1.png) ![2.png](https://archive.blender.org/developer/F110198/2.png) ![3.png](https://archive.blender.org/developer/F110200/3.png) ![4.png](https://archive.blender.org/developer/F110202/4.png) **Exact steps for others to reproduce the error** open this [mask_undo.blend](https://archive.blender.org/developer/F110204/mask_undo.blend) press F12 to receive rendered result with compositing try to change anything in this mask and press ctrl+Z to undo - we will see don't update.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-13 23:06:45 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Bastien Montagne changed title from mask undo error to Missing refresh on Undo for nodes (mask example) 2014-09-14 00:03:48 +02:00
Alexey was unassigned by Bastien Montagne 2014-09-14 00:03:48 +02:00

Added subscribers: @Sergey, @LukasTonne

Added subscribers: @Sergey, @LukasTonne

Added subscriber: @mont29

Added subscriber: @mont29

In fact, this affect any undo in nodes (at least for compo, but suspect others as well).

Undo just triggers (in usual cases) a generic NC_WINDOW message - which is unknown from Node space listener. This may also affect other spaces, btw, like clip editor?

Anyway, this seems to be some kind of 'brute force' approach, so I guess we’d just have to handle that message in nodes and trigger refresh for it? Quick test shows it works, but quite unsure whether we have more subtle ways to handle the issue?

In fact, this affect any undo in nodes (at least for compo, but suspect others as well). Undo just triggers (in usual cases) a generic `NC_WINDOW` message - which is unknown from Node space listener. This may also affect other spaces, btw, like clip editor? Anyway, this seems to be some kind of 'brute force' approach, so I guess we’d just have to handle that message in nodes and trigger refresh for it? Quick test shows it works, but quite unsure whether we have more subtle ways to handle the issue?
Author

node.png

![node.png](https://archive.blender.org/developer/F110231/node.png)
Sergey Sharybin was assigned by Bastien Montagne 2014-09-15 14:05:25 +02:00

This issue was referenced by 1e948b251d

This issue was referenced by 1e948b251d63cb9141ff71d24fbcf343d38c7da4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1e948b251d.

Closed by commit 1e948b251d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41818
No description provided.