source/blender/editors/space_image/space_image.c
@@ -539,6 +539,12 @@ static void image_listener(bScreen *sc, ScrArea *sa, wmNotifier *wmn)
 			}
 			break;
 		}
+		case NC_WM:
+			if(wmn->data == ND_UNDO) {
+				ED_area_tag_redraw(sa);
+				ED_area_tag_refresh(sa);
+			}
+			break;
 	}
 }
 
